# orders-test-task

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  ruff.toml  run.sh
app/backend/: settings.py  urls.py
app/orders/: filters.py  models.py
app/orders/tests/: test_orders.py
app/users/: admin.py  views.py
app/users/migrations/: 0002_alter_user_age.py  0004_alter_user_email.py
app/users/tests/: test_user_model.py
backend/: settings.py  urls.py
orders/: admin.py  serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py
orders/tests/: test_orders.py
users/: models.py  serializers.py  urls.py
users/migrations/: 0001_initial.py  0003_alter_user_age_alter_user_first_name_and_more.py
users/tests/: test_user_api.py  test_user_model.py
