[project]
name = "orders-tesk-task"
version = "1.0.0"
description = "Test task for Backend Python developer"
authors = [
    {name = "Pengu1Nus",email = "mustafin.zul@gmail.com"}
]
readme = "README.md"
requires-python = "3.11.13"
dependencies = [
    "django (>=5.2.3,<6.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.0"

